--- a/website1/index.html
+++ b/website1/index.html
@@ -5,7 +5,6 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Go Blue!</title>
-    <link rel="icon" type="image/x-icon" href="images/umsquarelogo.png">
 </head>
 </head>
 <body>
@@ -37,7 +36,7 @@
 
     <div>
         <h2>Gallery</h2>
-        <img src="images/blockm.jpg" alt="University of Michigan Block M" width="500px">
+        <img src="images/band.jpeg" alt="University of Michigan Block M" width="500px">
         <img src="images/diag.jpg" alt="University of Michigan Diag" width="500px">
         <img src="images/lawquad.jpeg" alt="University of Michigan Law Quad" width="500px">
     </div>
