--- a/website2/index.html
+++ b/website2/index.html
@@ -23,31 +23,31 @@
         <ol>
             <li>
                 <figure id="one">
-                    <img src="images/shawshank.jpg" alt="Shawshank Redemption" width="200px">
+                    <img src="images/shawshank.jpg" alt="Movie poster for Shawshank Redemption" width="200px">
                     <figcaption>The Shawshank Redemption (1994)</figcaption>
                 </figure>
             </li>
             <li>
                 <figure id="two">
-                    <img src="images/godfather.jpg" alt="Shawshank Redemption" width="200px">
+                    <img src="images/godfather.jpg" alt="Movie poster for the Godfather" width="200px">
                     <figcaption>The Godfather (1972)</figcaption>
                 </figure>
             </li>
             <li>
                 <figure id="three">
-                    <img src="images/darkknight.jpg" alt="Shawshank Redemption" width="200px">
+                    <img src="images/darkknight.jpg" alt="Movie poster for the Dark Knight" width="200px">
                     <figcaption>The Dark Knight (2008)</figcaption>
                 </figure>
             </li>
             <li>
                 <figure id="four">
-                    <img src="images/godfather2.jpg" alt="Shawshank Redemption" width="200px">
+                    <img src="images/godfather2.jpg" alt="Movie poster for the Godfather Part II" width="200px">
                     <figcaption>The Godfather Part II</figcaption>
                 </figure>
             </li>
             <li>
                 <figure id="five">
-                    <img src="images/12angrymen.jpg" alt="Shawshank Redemption" width="200px">
+                    <img src="images/12angrymen.jpg" alt="Movie poster for 12 Angry Men" width="200px">
                     <figcaption>12 Angry Men (1957)</figcaption>
                 </figure>
             </li>
@@ -57,5 +57,6 @@
     <a href="https://www.imdb.com/chart/top/" target="_blank">Source</a>
 
     <!-- Tests images (width, alt text), anchor tags, ids, ordered lists, figures, nav -->
+    <!-- Note: all of the movie posters may contain copyright conflicts -->
 </body>
 </html>
